Added least squares slide to L7.

--- a/lecture7/index.html
+++ b/lecture7/index.html
@@ -579,10 +579,32 @@ lecture_num: 7
 
 <section>
     <h2>Least-squares Phylogenetic Inference</h2>
+
+    <div>
+        <div style="display:inline-block;width:45%;vertical-align:middle">
+            <ul>
+                <li>Can use genetic distance as the basis for least-squares-based phylogenetic inference.</li>
+                <li>Define cost of tree as the (weighted) sum of the squares of the
+                difference between the genetic distance on the tree and the
+                distance estimated from the sequence alignment:
+                $$C(T) = \sum_i\sum_j w_{ij}(d_{ij}(T)-\hat{d}_{ij})$$ </li>
+                <li>Search for tree $T$ with lowest $C(T)$.</li>
+            </ul>
+        </div>
+        <div style="display:inline-block;width:45%;vertical-align:middle">
+            <img data-src="lsq.svg" style="width:100%">
+        </div>
+    </div>
+
+    <p style="margin-top:0">Comments:
+    <ul>
+        <li>Ignores correlations due to shared ancestry.</li>
+        <li>Consistent estimator: converges to truth in the limit of infinitely long alignment.</li>
+    </ul></p>
 </section>
 
 <section>
-    <h2>Doing things properly: The Likelihood Function</h2>
+    <h2>The Likelihood Function</h2>
 </section>
 
 <section>
