--- a/lecture7/index.html
+++ b/lecture7/index.html
@@ -7,7 +7,7 @@ lecture_num: 7
 
     <ol class="spaced" style="margin-top:10%">
         <li>Lab this Friday. Details to be announced.</li>
-        <li>Assignment is due <b>Friday this week</b>.</li>
+        <li>Assignment is due <b>this Friday</b>.</li>
         <li>My office is room 467 (fourth floor) of building 303S (in the CS department)</li>
         <li>Office hours:
             <ul>
