Improvements to L8 layout.

--- a/lecture8/index.html
+++ b/lecture8/index.html
@@ -27,15 +27,13 @@ lecture_num: 8
 
     </section>
 
-    <section>
-        <h3>A hole in logic</h3>
-
-        <blockquote style="text-align:justify;margin-top:100px">Suppose some dark night a policeman walks down a street. He
+    <section class="center">
+        <blockquote style="text-align:justify">Suppose some dark night a policeman walks down a street. He
             hears a burglar alarm, looks across the street, and sees a jewelry store with
             a broken window. Then a gentleman wearing a mask comes crawling out of the
             window, carrying a bag full of jewelry. The policeman decides immediately that
             the gentleman is a thief. How does he decide this?</blockquote>
-        <div class="cite">Jaynes: Probability Theory</div>
+        <div style="text-align:right;margin-right:15%;font-size:0.8em"><a href="" class="cite">Jaynes: Probability Theory</a></div>
     </section>
 
     <section>
@@ -364,14 +362,14 @@ lecture_num: 8
     <section>
         <h3>Improper priors</h3>
 
-        <blockquote class="alert" style="width:100%">Hold on, how can we choose a
+        <blockquote class="alert">Hold on, how can we choose a
             value of $c$ in $f(\lambda)=c$ so that $f(\lambda)$ is
             normalized on the domain of $\lambda$?<br>
         </blockquote>
 
         <img class="fragment" style="width:100%" data-src="uniform_improper.png">
 
-        <blockquote class="fragment" style="width:100%">We can't! This $f(\lambda)$
+        <blockquote class="fragment">We can't! This $f(\lambda)$
             is not a true probability density.</blockquote>
 
         <p class="fragment">It turns out that this is usually okay, <b>provided the
@@ -380,9 +378,10 @@ lecture_num: 8
 
     <section>
         <h3>Improper priors (continued)</h3>
-        However, for weak data sets improper priors can cause problems.
-        It is important to remember that
-        <ul>
+
+        <p style="margin-top:10%"> However, for weak data sets improper priors can cause problems.
+        It is important to remember that:</p>
+        <ul style="width:80%">
             <li class="fragment">One almost never knows absolutely nothing.</li>
             <li class="fragment">Upper and lower bounds can almost always be placed.</li>
             <li class="fragment">The log-normal prior can be considered a normalizable replacement for
