Added some justifications for Bayesian probability.

--- a/lecture8/index.html
+++ b/lecture8/index.html
@@ -61,8 +61,8 @@ lecture_num: 8
     <section>
         <h3>Developing a theory of<br>plausible reasoning</h3>
 
-        Our theory must satisfy the following requirements:
-        <ol>
+        <p> Our theory must satisfy the following requirements:</p>
+        <ol class="spaced">
             <li class="fragment">Degrees of plausibility are represented by<br>real numbers.</li>
             <li class="fragment">Require qualitative correspondence with<br>common sense.</li>
             <li class="fragment">Consistency:
@@ -78,7 +78,12 @@ lecture_num: 8
         <h3>Probability: extended logic</h3>
 
         <p>These requirements are enough to uniquely identify the
-        essential rules of probability theory!</p>
+        essential rules of probability theory!
+        <ul>
+            <li><a href="https://dx.doi.org/10.1119%2F1.1990764" class="cite">Richard Cox, Am. J. Phys., 1946</a></li>
+            <li>E. T. Jaynes, <i>Probability Theory: The Logic of Science</i>, Cambridge Uni. Press, 2003</li>
+        </ul>
+        </p>
 
         <blockquote class="fragment">
             <ul>
@@ -174,6 +179,33 @@ lecture_num: 8
             </ul>
         </blockquote>
         <p class="fragment">Often, $f(x)$ follows the standard rules of probability.</p>
+
+    </section>
+
+    <section>
+        <h3>Justification for the Bayesian interpretation</h3>
+
+        <p>In fact, there are several justifications:</p>
+
+        <dl style="width:80%">
+            <div class="fragment">
+            <dt>Axiomatic approach</dt>
+            <dd>Derivation of probability calculus from several axioms for the manipulation of reasonable expectation.</dd>
+            </div>
+
+            <div class="fragment" style="margin-top:1em">
+            <dt>Dutch book approach</dt>
+            <dd>If the rules of probability are not followed when assigning gambling odds, it becomes possible for
+            the house or the punter to always win.</dd>
+            </div>
+
+            <div class="fragment" style="margin-top:1em">
+            <dt>Decision theory approach</dt>
+            <dd>Every <b><a href="https://en.wikipedia.org/wiki/Admissible_decision_rule">admissible</a></b> statistical procedure is either a
+            Bayesian procedure or a limit of Bayesian procedures. Every
+            Bayesian procedure is admissible.</dd>
+            </div>
+        </dl>
 
     </section>
 </section>
