--- a/lecture8/index.html
+++ b/lecture8/index.html
@@ -219,14 +219,14 @@ lecture_num: 8
         <h3>What is inference?</h3>
 
         <div class="fragment">
-            <img style="float:right" data-src="inference.jpg">
-
-            <blockquote style="float:left">
+            <blockquote style="display:inline-block;vertical-align:middle">
                 Inference is the act of deriving logical conclusions from premises assumed to be true.
             </blockquote>
+
+            <img style="display:inline-block;vertical-align:middle" data-src="inference.jpg">
         </div>
 
-        <p class="fragment" style="clear:both">
+        <p class="fragment">
         Statistical inference generalises this to situations where
         the premises are not sufficient to draw conclusions
         without uncertainty.</p>
