Removed contraversial statement.

--- a/lecture8/index.html
+++ b/lecture8/index.html
@@ -403,16 +403,12 @@ lecture_num: 8
 
         <blockquote class="fragment">We can't! This $f(\lambda)$
             is not a true probability density.</blockquote>
-
-        <p class="fragment">It turns out that this is usually okay, <b>provided the
-            likelihood causes the posterior to be normalizable</b>.</p>
     </section>
 
     <section>
         <h3>Improper priors (continued)</h3>
 
-        <p style="margin-top:10%"> However, for weak data sets improper priors can cause problems.
-        It is important to remember that:</p>
+        <p style="margin-top:10%">It is important to remember that:</p>
         <ul style="width:80%">
             <li class="fragment">One almost never knows absolutely nothing.</li>
             <li class="fragment">Upper and lower bounds can almost always be placed.</li>
