--- a/lecture9/index.html
+++ b/lecture9/index.html
@@ -1,3 +1,106 @@
 ---
 lecture_num: 9
 ---
+
+<section>
+    <h2>The Phylogenetic Likelihood</h2>
+
+    <blockquote style="font-size:2em;margin-top:20%">
+        $$P(A|T, Q)$$
+    </blockquote>
+
+    <ul style="width:80%;margin-top:2em">
+        <li>$A$ is a multiple sequence alignment of $n$ sequences,</li>
+        <li>$T$ is a phylogenetic tree with $n$ leaves, and</li>
+        <li>$Q$ is an instantaneous transition rate matrix parameterizing the CTMC-based model of sequence evolution.</li>
+    </ul>
+
+    <p><i>Need a probability distribution for $T$!</i></p>
+</section>
+
+<section>
+    <h2>The Phylogenetic Posterior</h2>
+
+    <blockquote style="margin-top:20%">
+        $$P(T,Q|A) = \frac{1}{P(A)}P(A|T,Q)P(T)P(Q)$$
+    </blockquote>
+
+    <blockquote style="margin-top:1em">
+        $$P(T,Q|A,M) = \frac{1}{P(A|M)}P(A|T,Q,M)P(T|M)P(Q|M)$$
+    </blockquote>
+</section>
+
+<section>
+    <h2>The Neutrality Assumption</h2>
+</section>
+
+
+<section class="center">
+    <h2>Tree Priors</h2>
+</section>
+
+<section>
+    <h3>Uniform tree prior</h3>
+</section>
+
+<section>
+    <h3>The Yule model for speciation</h3>
+</section>
+
+<section>
+    <h3>Birth-death priors</h3>
+</section>
+
+<section>
+    <h3>Birth-death-sampling priors</h3>
+</section>
+
+<section>
+    <h3>Coalescent priors</h3>
+</section>
+
+<section>
+    <h3>Multi-species coalescent priors</h3>
+</section>
+
+
+<section>
+    <h2>Charcterizing Phylogenetic Posteriors</h2>
+
+    <ul>
+        <li>MCMC</li>
+        <li>ABC</li>
+        <li>Particle filtering</li>
+        <li>Other methods? (Variational Bayes?)</li>
+    </ul>
+</section>
+
+<section class="center">
+    <h2>MCMC in Tree Space</h2>
+</section>
+
+<section>
+    <h3>Real MCMC algorithm</h3>
+</section>
+
+<section>
+    <h3>Proposal distribtuions/operators for Trees</h3>
+</section>
+
+<section>
+    <h3>Stopping criteria</h3>
+</section>
+
+
+<section class="center">
+    <h2>Post-processing</h2>
+</section>
+
+
+<section>
+    <h2>Summary</h2>
+</section>
+
+<section>
+    <h2>Reading</h2>
+</section>
